# port-health-check-systemd-timer-unit-example

./: CMakeLists.txt  README.rst  package.spec.in  port-health-checker-generator.sh.in  port-health-checker.man  port-health-checker.spec  port-health-checker@.service
conf/: 00_example.conf  20_http_nginx.conf  CMakeLists.txt  nginx_80_127.0.0.1.conf  notification-mail.conf
doc/: CMakeLists.txt
pkg/: CMakeLists.txt  package.spec.in  rpmbuild-wrapper.sh
src/: CMakeLists.txt  notification-mail@.service  port-health-checker-.service.in  port-health-checker-.timer.in  port-health-checker-generator.sh.in  port-health-checker-units-generator.sh  port-health-checker@.service  port-health-checker@.timer
tests/: CMakeLists.txt  generate.bats.in
