set(SYSTEMD_UNITDIR lib/systemd/system)
file(GLOB SYSTEMD_UNITS "${CMAKE_CURRENT_SOURCE_DIR}/*.service")
file(GLOB TEMPLATES "${CMAKE_CURRENT_SOURCE_DIR}/*.in")

install(FILES ${SYSTEMD_UNITS} DESTINATION ${SYSTEMD_UNITDIR})
install(FILES ${TEMPLATES} DESTINATION ${CMAKE_INSTALL_DATADIR}/${CMAKE_PROJECT_NAME})
install(PROGRAMS port-health-checker-units-generator.sh
        DESTINATION ${CMAKE_INSTALL_LIBEXECDIR}/${CMAKE_PROJECT_NAME})
